src/styles/_layout.scss
/***********************************************************************
Header
************************************************************************/

.header {
  display: block;
  text-decoration: none;
  @include block-spacing;
}

  .logo--header {
    font-size: 0;
    width: 256px; height: 62px;
    background: url(/images/logo_lrg.png) no-repeat;
    background-size: 256px 62px;
    background-size: fit;
    @include retina {
      background-image: url(/images/logo_lrg@2x.png);
    }
  }

  .tagline {
    color: $white;
    font-size: 16px;
    font-weight: 300;
    text-transform: uppercase;
  }

/***********************************************************************
Footer
************************************************************************/

.footer {
  @include block-spacing;
  padding-bottom: $spacing-unit*4;
  margin-top: $spacing-unit*2 !important;
}

  .logo--footer {
    font-size: 0;
    width: 167px; height: 40px;
    background: url(/images/logo_sm.png) no-repeat;
    background-size: 167px 40px;
    @include retina {
      background-image: url(/images/logo_sm@2x.png);
    }
    margin-bottom: 24px;
  }

  .human-logo {
    font-size: 0;
    display: inline-block;
    width: 96px; height: 96px;
    background: url(/images/human_logo.png) no-repeat;
    background-size: 96px 96px;
    @include retina {
      background-image: url(/images/human_logo@2x.png);
    }
  }

  .quini-logo {
    margin-left: $spacing-unit;
    font-size: 0;
    display: inline-block;
    width: 72px; height: 96px;
    background: url(/images/quini_logo.png) no-repeat;
    background-size: 72px 96px;
    @include retina {
      background-image: url(/images/quini_logo@2x.png);
    }
  }

  .address,
  .contact {
    text-transform: uppercase;
    line-height: 1.3;
    margin-bottom: 24px;
  }

  .social {
    font-size: 0;
    padding-bottom: $spacing-unit*1.5;
  }

  .social-link {
    display: inline-block;
  }

  .social-link + .social-link {
    margin-left: $spacing-unit*5;
  }

  .social-link--vimeo {
    width: 46px; height: 40px;
    background: url(/images/vimeo.png) no-repeat;
    background-size: 46px 40px;
    @include retina {
      background-image: url(/images/vimeo@2x.png);
    }
  }

  .social-link--twitter {
    width: 48px; height: 40px;
    background: url(/images/twitter.png) no-repeat;
    background-size: 48px 40px;
    @include retina {
      background-image: url(/images/twitter@2x.png);
    }
  }

  .social-link--instagram {
    width: 42px; height: 40px;
    background: url(/images/instagram.png) no-repeat;
    background-size: 42px 40px;
    @include retina {
      background-image: url(/images/instagram@2x.png);
    }
  }

  .social-link--medium {
    width: 53px; height: 41px;
    background: url(/images/medium.png) no-repeat;
    background-size: 53px 41px;
    @include retina {
      background-image: url(/images/medium@2x.png);
    }
  }

  .social-link--pinterest {
    width: 38px; height: 40px;
    background: url(/images/pinterest.png) no-repeat;
    background-size: 38px 40px;
    @include retina {
      background-image: url(/images/pinterest@2x.png);
    }
  }

